--- a/TODO
+++ b/TODO
@@ -3,3 +3,4 @@ Sebastien Badia - Sebian <se@sebian.fr>
   * tests:
     - gestion des clées ssh (test de présence,choix,option)
     - nombre de noeuds mini pour une xp
+    - nova-manage bd sync
