ssh_key managment (rsa/dsa)

--- a/TODO
+++ b/TODO
@@ -1,7 +1,8 @@
 # vi: set ft=changelog :
 Sebastien Badia - Sebian <se@sebian.fr>
   * tests:
-    - gestion des clées ssh (test de présence,choix,option)
     - nombre de noeuds mini pour une xp
     - nova-manage bd sync
-    - gestion ssh key+tests
+  * features:
+    - gestion ip virtuelles (g5k) et floating ips
+    - gestion nova-volumes (custom)
