--- a/TODO
+++ b/TODO
@@ -4,5 +4,4 @@ Sebastien Badia - Sebian <se@sebian.fr>
     - nombre de noeuds mini pour une xp
     - nova-manage bd sync
   * features:
-    - gestion ip virtuelles (g5k) et floating ips
-    - gestion nova-volumes (custom)
+    - gestion ip virtuelles (g5k) => working in nova, but un-reserved on g5k…
