Add temporals infos (time elapsed)

--- a/TODO
+++ b/TODO
@@ -4,3 +4,8 @@ Sebastien Badia - Sebian <se@sebian.fr>
     - nova-manage bd sync
   * features:
     - gestion ip virtuelles (g5k) => working in nova, but un-reserved on g5k…
+
+
+  * Ecole: afficher les outputs puppet (pour meubler)
+  * vm ip pub: ip addr show
+  * ec2_api: unset pour la variable
