--- a/utils/custom_kadeploy/README
+++ b/utils/custom_kadeploy/README
@@ -1,1 +1,1 @@
-kadeploy3 -f $OAR_NODEFILE -e ubuntu-x64-1204-parted -k -d -V4 --set-custom-operations ./utils/custom_kadeploy/customparted.yml
+cd utils/custom_kadeploy;kadeploy3 -f $OAR_NODEFILE -e ubuntu-x64-1204-parted -k -d -V4 --set-custom-operations ./customparted.yml
